welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:3: error: 'case' expected but '(' found.
		(x,y) if ((x<=60 && y==false) || (x<=65 && y==true))				=> return 0
                ^caughtSpeeding:4: error: '}' expected but ';' found.
		(x,y) if ((x>60 && x<81 && y==false) || (x>65 && x<86 && y== true))	=> return 1
^caughtSpeeding:4: error: ';' expected but 'if' found.
		(x,y) if ((x>60 && x<81 && y==false) || (x>65 && x<86 && y== true))	=> return 1
                      ^caughtSpeeding:5: error: ';' expected but 'if' found.
		(x,y) if ((x>=81 && y==false) || (x>=86 && y==true))				=> return 2
                      ^caughtSpeeding:8: error: eof expected but '}' found.
 }
 ^